# A-Simple-Discord-Bot-With-Rust

./: Cargo.toml
src/: main.rs
src/commands/: christos.rs  happy_birthday.rs  maher.rs  mod.rs  stock.rs
