[package]
name = "discord_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = ["rt", "rt-multi-thread", "macros"] }
serenity = "0.11.5"
yahoo-finance = "0.3.0"
colored = "2.0.0"